案件情報マスタ取得処理に削除フラグの条件を追加
